# vision-ai-service

./: .coverage  .flake8  .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  mypy.ini  noxfile.py  photopusher_settings.json  pyproject.toml
.github/workflows/: deploy_server.yml  deploy_webwerver.yml  test.yml
src/sprint_photopusher/: __init__.py  image_service.py  photopusher.py
tests/: G14KvartRes.json  __init__.py  conftest.py  test_photopusher.py
tests/files/: Finish_8168_tags.json  Finish_8168_type.json
tests/integration/: __init__.py
vision-ai-service/: __init__.py  app.py  events_adapter.py  exceptions.py  object_counting_service.py  object_detector_service.py  vision_ai_service.py  vision_ai_service_v2.py
vision-ai-service/config/: global_settings.json  ski_tracker.yaml  video_status.json
vision-ai-service/files/archive/: info.txt
vision_ai_service/: __init__.py  ai_service.py  app.py
vision_ai_service/adapters/: __init__.py  config_adapter.py  events_adapter.py  exceptions.py  status_adapter.py  user_adapter.py  vision_ai_service.py
vision_ai_service/config/: global_settings.json
vision_ai_service/services/: __init__.py  simulate_service.py  video_ai_service.py  video_ai_service_v2.py  vision_ai_service.py
