[tool.poetry]
name = "vision-ai-service"
version = "0.9.0"
description = "A tool to analyse video stream and detect people crossing line."
authors = ["Stig B. Dørmænen <stigbd@gmail.com>", "Heming Harnæs <heming.harnaes@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/langrenn-sprint/vision-ai-service.git"
repository = "https://github.com/heming-langrenn/vision-ai-service"
classifiers=[
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: Apache Software License",
      "Operating System :: OS Independent",
      ]

[tool.poetry.dependencies]
python = ">=3.12,<4"
pandas = "^2.1.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
multidict = "^6.0.2"
aiohttp = "^3.11.11"
watchdog = "^4.0.0"
piexif = "^1.1.3"
click = "^8.1.7"
lapx = "^0.5.9"
aiohttp-session = "^2.12.0"
opencv-python = "^4.10.0.84"
torch = "^2.5.0"
jinja2 = "^3.1.5"
ultralytics = "^8.3.67"
pillow = "^11.1.0"
multiprocessing = "^2.6"
ast = "^0.0.2"


[tool.poetry.dev-dependencies]
aiohttp-devtools = "^1.1.0"
aioresponses = "^0.7.6"
black = "^24.3.0"
codecov = "^2.1.13"
coverage = "^7.3.2"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.12.2"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^1.7.1"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
pep8-naming = "^0.13.2"
pytest = "^7.4.3"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.12.0"
requests = "^2.31.0"
safety = "^3.2.3"
poetry = "^1.7.1"

[tool.coverage.paths]
source = ["vision_ai_service"]

[tool.coverage.run]
branch = false
omit = [
  "*gunicorn_config.py",
  "*db_utils.py",
]
source = ["vision_ai_service"]

[tool.coverage.report]
fail_under = 10
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "gunicorn.*",
  "requests.*",
  "motor.*",
  "pytest_mock",
  "aioresponses.*",
  "pandas.*",
  "pythonjsonlogger.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
